--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,10 +3,10 @@
   "tasks": [
     {
       "type": "npm",
-      "script": "start",
+      "script": "dev",
       "problemMatcher": [],
-      "label": "npm: start",
-      "detail": "npx gulp",
+      "label": "npm: dev",
+      "detail": "bun dev",
       "runOptions": {
         "runOn": "folderOpen"
       }
