--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,13 +2,23 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "type": "npm",
-      "script": "dev",
+      "type": "shell",
+      "command": "bun",
+      "args": ["run", "dev"],
       "problemMatcher": [],
-      "label": "npm: dev",
-      "detail": "bun dev",
+      "label": "bun: watch",
+      "detail": "bun run dev",
+      "isBackground": true,
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
       "runOptions": {
         "runOn": "folderOpen"
+      },
+      "presentation": {
+        "reveal": "always",
+        "panel": "new"
       }
     }
   ]
